feat(hitl): add operator as ti filter

--- a/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
+++ b/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
@@ -5594,6 +5594,14 @@ paths:
           items:
             type: integer
           title: Try Number
+      - name: operator
+        in: query
+        required: false
+        schema:
+          type: array
+          items:
+            type: string
+          title: Operator
       - name: limit
         in: query
         required: false
@@ -6386,6 +6394,14 @@ paths:
           items:
             type: integer
           title: Try Number
+      - name: operator
+        in: query
+        required: false
+        schema:
+          type: array
+          items:
+            type: string
+          title: Operator
       - name: limit
         in: query
         required: false
