--- a/providers/apache/arrow/pyproject.toml
+++ b/providers/apache/arrow/pyproject.toml
@@ -60,7 +60,7 @@ dependencies = [
     "apache-airflow>=2.10.0",
     "apache-airflow-providers-common-sql>=1.20.0",
     "adbc-driver-manager>=1.7.0",
-    "pyarrow>=21.0.0",
+    "pyarrow>=18.0.0",  #  TODO: check why apache beam is limited to version 18.0.0
 ]
 
 [dependency-groups]
