Introduce generic Callbacks
Introduce a generic Callback model that can be used for Deadline
callbacks for now and hopefully the on_*_callbacks for Dags and Tasks
in the future.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1669,6 +1669,7 @@ repos:
           ^airflow-core/src/airflow/logging/remote\.py$|
           ^airflow-core/src/airflow/models/asset\.py$|
           ^airflow-core/src/airflow/models/baseoperator\.py$|
+          ^airflow-core/src/airflow/models/callback\.py$|
           ^airflow-core/src/airflow/models/connection\.py$|
           ^airflow-core/src/airflow/models/dag\.py$|
           ^airflow-core/src/airflow/models/deadline\.py$|
