--- a/.github/workflows/basic-tests.yml
+++ b/.github/workflows/basic-tests.yml
@@ -99,6 +99,8 @@ jobs:
           persist-credentials: false
       - name: "Prepare and cleanup runner"
         run: ./scripts/ci/prepare_and_cleanup_runner.sh
+      - name: "Install Breeze"
+        uses: ./.github/actions/breeze
       - name: "Run shared secrets masker tests"
         run: uv run --group dev pytest --color=yes
         working-directory: ./shared/secrets_masker/
