--- a/shared/secrets_masker/pyproject.toml
+++ b/shared/secrets_masker/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     'pendulum>=3.1.0',
     "methodtools>=0.4.7",
     "colorlog>=6.8.2",
+    "pydantic>2.11.0",
 ]
 
 [dependency-groups]
