--- a/.github/workflows/airflow-e2e-tests.yml
+++ b/.github/workflows/airflow-e2e-tests.yml
@@ -106,3 +106,12 @@ jobs:
           path: './airflow-e2e-tests/_e2e_test_report.json'
           retention-days: '7'
           if-no-files-found: 'error'
+        if: always()
+      - name: "Upload logs"
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02  # v4.6.2
+        with:
+          name: e2e-test-logs
+          path: './airflow-e2e-tests/logs/'
+          retention-days: '7'
+          if-no-files-found: 'error'
+        if: always()
