--- a/providers/edge3/src/airflow/providers/edge3/plugins/www/tsconfig.app.json
+++ b/providers/edge3/src/airflow/providers/edge3/plugins/www/tsconfig.app.json
@@ -23,7 +23,8 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
-      "src/*": ["./src/*"]
+      "src/*": ["./src/*"],
+      "openapi/*": ["./openapi-gen/*"]
     }
   },
   "include": ["src"]
