--- a/providers/edge3/src/airflow/providers/edge3/plugins/www/tsconfig.node.json
+++ b/providers/edge3/src/airflow/providers/edge3/plugins/www/tsconfig.node.json
@@ -21,7 +21,8 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
-      "src/*": ["./src/*"]
+      "src/*": ["./src/*"],
+      "openapi/*": ["./openapi-gen/*"]
     }
   },
   "include": ["vite.config.ts"]
