--- a/providers/edge3/src/airflow/providers/edge3/plugins/www/package.json
+++ b/providers/edge3/src/airflow/providers/edge3/plugins/www/package.json
@@ -29,44 +29,45 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@7nohe/openapi-react-query-codegen": "^1.6.2",
     "@chakra-ui/anatomy": "^2.3.4",
-    "@chakra-ui/react": "^3.24.2",
+    "@chakra-ui/react": "^3.20.0",
     "@emotion/react": "^11.14.0",
+    "@tanstack/react-query": "^5.75.1",
     "@tanstack/react-table": "^8.21.3",
-    "@types/react-router": "^5.1.20",
+    "axios": "^1.11.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.1"
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.3.2",
-    "@eslint/js": "^9.33.0",
+    "@7nohe/openapi-react-query-codegen": "^1.6.2",
+    "@eslint/compat": "^1.2.9",
+    "@eslint/js": "^9.25.1",
     "@stylistic/eslint-plugin": "^2.13.0",
-    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "^22.17.2",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react-swc": "^3.11.0",
+    "@types/node": "^22.15.3",
+    "@types/react": "^18.3.19",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/coverage-v8": "^2.1.9",
     "eslint": "^9.25.1",
-    "eslint-config-prettier": "^10.1.8",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-perfectionist": "^4.15.0",
-    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-perfectionist": "^4.12.3",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-unicorn": "^55.0.0",
     "globals": "^15.15.0",
-    "happy-dom": "^17.6.3",
-    "prettier": "^3.6.2",
+    "happy-dom": "^17.4.6",
+    "prettier": "^3.5.3",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.40.0",
+    "typescript-eslint": "^8.31.1",
     "vite": "^5.4.19",
     "vite-plugin-css-injected-by-js": "^3.5.2",
     "vite-plugin-dts": "^4.5.4",
