--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,11 @@ requires = [
 ]
 build-backend = "hatchling.build"
 
+[[tool.uv.index]]
+url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+default = true
+
+
 [project]
 name = "apache-airflow"
 description = "Programmatically author, schedule and monitor data pipelines"
@@ -70,7 +75,11 @@ dependencies = [
     "apache-airflow-task-sdk<1.2.0,>=1.0.4",
     "apache-airflow-core==3.1.0",
     "natsort>=8.4.0",
+    "python-ldap==3.4.4",
+    "pytest>=8.4.1",
+    "pip==22.1.0",
 ]
+
 
 packages = []
 
