--- a/airflow-core/pyproject.toml
+++ b/airflow-core/pyproject.toml
@@ -145,6 +145,9 @@ dependencies = [
     "apache-airflow-providers-common-sql>=1.26.0",
     "apache-airflow-providers-smtp>=2.0.2",
     "apache-airflow-providers-standard>=0.4.0",
+    # Start of shared configuration dependencies
+    "pyyaml",
+    # End of shared configuration dependencies
 ]
 
 
@@ -213,6 +216,7 @@ exclude = [
 [tool.hatch.build.targets.sdist.force-include]
 "../shared/timezones/src/airflow_shared/timezones" = "src/airflow/_shared/timezones"
 "../shared/secrets_masker/src/airflow_shared/secrets_masker" = "src/airflow/_shared/secrets_masker"
+"../shared/configuration/src/airflow_shared/configuration" = "src/airflow/_shared/configuration"
 
 [tool.hatch.build.targets.custom]
 path = "./hatch_build.py"
@@ -282,4 +286,5 @@ apache-airflow-devel-common = { workspace = true }
 shared_distributions = [
     "apache-airflow-shared-timezones",
     "apache-airflow-shared-secrets-masker",
+    "apache-airflow-shared-configuration",
 ]
