--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1266,6 +1266,7 @@ dev = [
     "apache-airflow-ctl",
     "apache-airflow-shared-timezones",
     "apache-airflow-shared-secrets-masker",
+    "apache-airflow-shared-configuration",
 ]
 
 # To build docs:
@@ -1314,6 +1315,7 @@ apache-airflow-providers = { workspace = true }
 apache-aurflow-docker-stack = { workspace = true }
 apache-airflow-shared-timezones = { workspace = true }
 apache-airflow-shared-secrets-masker = { workspace = true }
+apache-airflow-shared-configuration = { workspace = true }
 # Automatically generated provider workspace items (update_airflow_pyproject_toml.py)
 apache-airflow-providers-airbyte = { workspace = true }
 apache-airflow-providers-alibaba = { workspace = true }
@@ -1431,6 +1433,7 @@ members = [
     "docker-stack-docs",
     "shared/timezones",
     "shared/secrets_masker",
+    "shared/configuration",
     # Automatically generated provider workspace members (update_airflow_pyproject_toml.py)
     "providers/airbyte",
     "providers/alibaba",
