fixed duplicate rows due to faulty dagrun join / select

--- a/airflow-core/src/airflow/config_templates/config.yml
+++ b/airflow-core/src/airflow/config_templates/config.yml
@@ -1994,7 +1994,7 @@ scheduler:
       version_added: 3.1.0
       type: string
       example: OPTIMISTIC
-      default: "PESSIMISTIC"
+      default: "OPTIMISTIC"
     scheduler_heartbeat_sec:
       description: |
         The scheduler constantly tries to trigger new tasks (look at the
