--- a/.github/workflows/airflow-e2e-tests.yml
+++ b/.github/workflows/airflow-e2e-tests.yml
@@ -40,11 +40,10 @@ on:  # yamllint disable-line rule:truthy
         description: "Whether to use uv to build the image (true/false)"
         type: string
         default: 'true'
-      test-timeout:
-        required: false
-        description: "Timeout for the test in minutes"
-        type: number
-        default: 60
+      docker-image-tag:
+        description: "Tag of the Docker image to test"
+        type: string
+        required: true
 
   workflow_call:
     inputs:
@@ -64,10 +63,10 @@ on:  # yamllint disable-line rule:truthy
         description: "Whether to use uv to build the image (true/false)"
         required: true
         type: string
-      test-timeout:
-        required: false
-        type: number
-        default: 60
+      docker-image-tag:
+        description: "Tag of the Docker image to test"
+        type: string
+        required: true
 
 jobs:
   test-e2e-integration-tests:
@@ -98,7 +97,9 @@ jobs:
           use-uv: ${{ inputs.use-uv }}
         id: breeze
       - name: "Test e2e integration tests"
-        run: cd ./airflow-e2e-tests && uv run pytest ./tests/
+        run: breeze testing airflow-e2e-tests
+        env:
+          DOCKER_IMAGE: "${{ inputs.docker-image-tag }}"
       - name: "Upload e2e test report"
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02  # v4.6.2
         with:
