--- a/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
+++ b/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
@@ -9620,7 +9620,10 @@ components:
         concurrency:
           type: integer
           title: Concurrency
-          description: Return max_active_tasks as concurrency.
+          description: 'Return max_active_tasks as concurrency.
+
+
+            Deprecated: Use max_active_tasks instead.'
           readOnly: true
         latest_dag_version:
           anyOf:
