Complete SeaTunnel provider fixes - all CI issues resolved
- Fixed all import paths for Airflow 3.0 SDK
- Added source-date-epoch to provider.yaml
- Updated boring-cyborg configuration
- Generated required provider build files
- Fixed all pre-commit hook issues
- All static checks, mypy, and formatting now pass

--- a/.github/boring-cyborg.yml
+++ b/.github/boring-cyborg.yml
@@ -69,6 +69,9 @@ labelPRBasedOnFilePath:
   provider:apache-pinot:
     - providers/apache/pinot/**
 
+  provider:apache-seatunnel:
+    - providers/apache/seatunnel/**
+
   provider:apache-spark:
     - providers/apache/spark/**
 
