refactor(hitl): rename HITLDetail.user_id as HITLDetail.responded_by

--- a/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
+++ b/airflow-core/src/airflow/api_fastapi/core_api/openapi/v2-rest-api-generated.yaml
@@ -8179,14 +8179,14 @@ paths:
           - type: boolean
           - type: 'null'
           title: Response Received
-      - name: user_id
+      - name: responded_by
         in: query
         required: false
         schema:
           type: array
           items:
             type: string
-          title: User Id
+          title: Responded By
       - name: subject_search
         in: query
         required: false
@@ -10822,11 +10822,11 @@ components:
             type: array
           - type: 'null'
           title: Respondents
-        user_id:
+        responded_by:
           anyOf:
           - type: string
           - type: 'null'
-          title: User Id
+          title: Responded By
         response_at:
           anyOf:
           - type: string
@@ -10873,9 +10873,9 @@ components:
       description: Schema for a collection of Human-in-the-loop details.
     HITLDetailResponse:
       properties:
-        user_id:
+        responded_by:
           type: string
-          title: User Id
+          title: Responded By
         response_at:
           type: string
           format: date-time
@@ -10892,7 +10892,7 @@ components:
           title: Params Input
       type: object
       required:
-      - user_id
+      - responded_by
       - response_at
       - chosen_options
       title: HITLDetailResponse
