--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -49,6 +49,7 @@ airflow-core/src/airflow/ui/public/i18n/locales/zh-TW/ @Lee-W @jason810496 # + @
 airflow-core/src/airflow/ui/public/i18n/locales/fr/ @pierrejeambrun @vincbeck
 airflow-core/src/airflow/ui/public/i18n/locales/tr/ @bugraoz93 # +@hasancatalgol
 airflow-core/src/airflow/ui/public/i18n/locales/hi/ @vatsrahul1001
+airflow-core/src/airflow/ui/public/i18n/locales/ca/ @jscheffl # + @ecodina
 
 # Security/Permissions
 /airflow-core/src/airflow/security/permissions.py @vincbeck
