Add run type filter to grid view for DAG run columns
  Add a run type filter to the grid view that allows users to filter
  DAG run columns by run type (scheduled, manual, backfill, asset_triggered).
  The filter is available in the grid options panel and persists user
  selection per DAG using localStorage.

--- a/airflow-core/src/airflow/api_fastapi/core_api/openapi/_private_ui.yaml
+++ b/airflow-core/src/airflow/api_fastapi/core_api/openapi/_private_ui.yaml
@@ -652,6 +652,14 @@ paths:
             format: date-time
           - type: 'null'
           title: Run After Lt
+      - name: run_type
+        in: query
+        required: false
+        schema:
+          type: array
+          items:
+            type: string
+          title: Run Type
       responses:
         '200':
           description: Successful Response
@@ -759,6 +767,14 @@ paths:
             format: date-time
           - type: 'null'
           title: Run After Lt
+      - name: run_type
+        in: query
+        required: false
+        schema:
+          type: array
+          items:
+            type: string
+          title: Run Type
       responses:
         '200':
           description: Successful Response
