Add triggering user filter to grid view
  - Add QueryDagRunTriggeringUserSearch parameter to filter by triggering_user_name
  - Update grid API endpoints to accept triggering_user parameter
  - Add triggering user search input to grid options panel
  - Implement state persistence with localStorage per DAG
  - Update OpenAPI generated types and services to support new parameter
  - Modify useGridRuns and useGridStructure hooks to pass triggeringUser
  - Add English translations for "Triggering User Name" label
  - Enable real-time filtering of DAG runs by username

  Users can now filter grid view columns to show only runs triggered by
  specific users through a search field in the options panel.

--- a/airflow-core/src/airflow/api_fastapi/core_api/openapi/_private_ui.yaml
+++ b/airflow-core/src/airflow/api_fastapi/core_api/openapi/_private_ui.yaml
@@ -660,6 +660,18 @@ paths:
           items:
             type: string
           title: Run Type
+      - name: triggering_user
+        in: query
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          description: "SQL LIKE expression \u2014 use `%` / `_` wildcards (e.g. `%customer_%`).\
+            \ Regular expressions are **not** supported."
+          title: Triggering User
+        description: "SQL LIKE expression \u2014 use `%` / `_` wildcards (e.g. `%customer_%`).\
+          \ Regular expressions are **not** supported."
       responses:
         '200':
           description: Successful Response
@@ -775,6 +787,18 @@ paths:
           items:
             type: string
           title: Run Type
+      - name: triggering_user
+        in: query
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          description: "SQL LIKE expression \u2014 use `%` / `_` wildcards (e.g. `%customer_%`).\
+            \ Regular expressions are **not** supported."
+          title: Triggering User
+        description: "SQL LIKE expression \u2014 use `%` / `_` wildcards (e.g. `%customer_%`).\
+          \ Regular expressions are **not** supported."
       responses:
         '200':
           description: Successful Response
