shared masker depends on shared conf

--- a/shared/secrets_masker/pyproject.toml
+++ b/shared/secrets_masker/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "methodtools>=0.4.7",
     "colorlog>=6.8.2",
     "pydantic>2.11.0",
+    "apache-airflow-shared-configuration",
 ]
 
 [dependency-groups]
