--- a/airflow-core/pyproject.toml
+++ b/airflow-core/pyproject.toml
@@ -148,6 +148,9 @@ dependencies = [
     # Start of shared configuration dependencies
     "pyyaml",
     # End of shared configuration dependencies
+    # Start of shared secrets-masker dependencies
+    "apache-airflow-shared-configuration",
+    # End of shared secrets-masker dependencies
 ]
 
 
