--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -51,7 +51,7 @@ airflow-core/src/airflow/ui/public/i18n/locales/nl/ @BasPH # + @DjVinnii
 airflow-core/src/airflow/ui/public/i18n/locales/pl/ @potiuk @mobuchowski # + @kacpermuda
 airflow-core/src/airflow/ui/public/i18n/locales/tr/ @bugraoz93 # +@hasancatalgol
 airflow-core/src/airflow/ui/public/i18n/locales/zh-TW/ @Lee-W @jason810496 # + @RoyLee1224 @guan404ming
-airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/ @Fortytwoo
+airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/ 
 
 # Security/Permissions
 /airflow-core/src/airflow/security/permissions.py @vincbeck
