--- a/airflow-core/src/airflow/api_fastapi/core_api/openapi/_private_ui.yaml
+++ b/airflow-core/src/airflow/api_fastapi/core_api/openapi/_private_ui.yaml
@@ -215,7 +215,11 @@ paths:
           anyOf:
           - type: boolean
           - type: 'null'
+          description: Filter DAGs by having import errors. Only DAGs that have been
+            successfully loaded before will be returned.
           title: Has Import Errors
+        description: Filter DAGs by having import errors. Only DAGs that have been
+          successfully loaded before will be returned.
       - name: last_dag_run_state
         in: query
         required: false
