--- a/providers/edge3/src/airflow/providers/edge3/plugins/www/package.json
+++ b/providers/edge3/src/airflow/providers/edge3/plugins/www/package.json
@@ -33,11 +33,14 @@
     "@emotion/react": "^11.14.0",
     "@tanstack/react-query": "^5.75.1",
     "axios": "^1.11.0",
+    "i": "^0.3.7",
     "next-themes": "^0.3.0",
+    "npm": "^11.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "react-timeago": "^8.3.0"
   },
   "devDependencies": {
     "@7nohe/openapi-react-query-codegen": "^1.6.2",
