Add the `psycopg-c` optional dependency to the postgres provider.
`psycopg[c]` is the preferred way to install the library according to the (psycopg installation docs)[https://www.psycopg.org/psycopg3/docs/basic/install.html#local-installation], for performance and ABI compatibility considerations.

--- a/providers/postgres/pyproject.toml
+++ b/providers/postgres/pyproject.toml
@@ -83,6 +83,9 @@ dependencies = [
 "psycopg" = [
     "psycopg[binary]>=3.2.9",
 ]
+"psycopg-c" = [
+    "psycopg[c]>=3.2.9",
+]
 
 [dependency-groups]
 dev = [
