Fix: Support workers-only deployments by creating secrets when any core component is enabled
- Update secret creation conditions to check for any enabled core component
  (webserver, workers, or scheduler) instead of only webserver
- Change component labels from specific service names to 'global-secret'
  to better reflect their shared nature
- Apply fix consistently across all Airflow versions:
  * < 3.0.0: webserver-secret-key-secret.yaml
  * >= 3.0.0: jwt-secret.yaml and api-secret-key-secret.yaml

--- a/chart/templates/secrets/api-secret-key-secret.yaml
+++ b/chart/templates/secrets/api-secret-key-secret.yaml
@@ -20,14 +20,14 @@
 ############################################
 ## Airflow Api Flask Secret Key Secret
 ############################################
-{{- if and (semverCompare ">=3.0.0" .Values.airflowVersion) (not .Values.apiSecretKeySecretName) }}
+{{- if and (semverCompare ">=3.0.0" .Values.airflowVersion) (or .Values.apiServer.enabled .Values.workers.enabled .Values.scheduler.enabled) (not .Values.apiSecretKeySecretName) }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "airflow.fullname" . }}-api-secret-key
   labels:
     tier: airflow
-    component: api-server
+    component: global-secret
     release: {{ .Release.Name }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: {{ .Release.Service }}
