--- a/chart/templates/secrets/jwt-secret.yaml
+++ b/chart/templates/secrets/jwt-secret.yaml
@@ -20,7 +20,7 @@
 ############################################
 ## Airflow JWT Secret
 ############################################
-{{- if semverCompare ">=3.0.0" .Values.airflowVersion }}
+{{- if and (semverCompare ">=3.0.0" .Values.airflowVersion) (or .Values.apiServer.enabled .Values.workers.enabled .Values.scheduler.enabled) }}
 {{- if not .Values.jwtSecretName }}
 {{ $generated_secret_key := (randAlphaNum 32 | b64enc) }}
 apiVersion: v1
@@ -29,7 +29,7 @@ metadata:
   name: {{ include "jwt_secret" . }}
   labels:
     tier: airflow
-    component: api-server
+    component: global-secret
     release: {{ .Release.Name }}
     chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
