--- a/chart/templates/secrets/webserver-secret-key-secret.yaml
+++ b/chart/templates/secrets/webserver-secret-key-secret.yaml
@@ -20,14 +20,14 @@
 ############################################
 ## Airflow Webserver Flask Secret Key Secret
 ############################################
-{{- if and (semverCompare "<3.0.0" .Values.airflowVersion) .Values.webserver.enabled (not .Values.webserverSecretKeySecretName) }}
+{{- if and (semverCompare "<3.0.0" .Values.airflowVersion) (or .Values.webserver.enabled .Values.workers.enabled .Values.scheduler.enabled) (not .Values.webserverSecretKeySecretName) }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "airflow.fullname" . }}-webserver-secret-key
   labels:
     tier: airflow
-    component: webserver
+    component: global-secret
     release: {{ .Release.Name }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: {{ .Release.Service }}
