--- a/chart/templates/secrets/webserver-secret-key-secret.yaml
+++ b/chart/templates/secrets/webserver-secret-key-secret.yaml
@@ -27,7 +27,7 @@ metadata:
   name: {{ include "airflow.fullname" . }}-webserver-secret-key
   labels:
     tier: airflow
-    component: global-secret
+    component: webserver
     release: {{ .Release.Name }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: {{ .Release.Service }}
