--- a/providers/microsoft/azure/provider.yaml
+++ b/providers/microsoft/azure/provider.yaml
@@ -225,6 +225,7 @@ sensors:
 
 filesystems:
   - airflow.providers.microsoft.azure.fs.adls
+  - airflow.providers.microsoft.azure.fs.msgraphfs
 
 hooks:
   - integration-name: Microsoft Azure Container Instances
