--- a/.github/workflows/basic-tests.yml
+++ b/.github/workflows/basic-tests.yml
@@ -394,3 +394,41 @@ jobs:
         run: |
           breeze release-management generate-issue-content-core \
             --limit-pr-count 2 --previous-release 3.0.1 --current-release 3.0.2 --verbose
+
+  test-airflow-standalone:
+    timeout-minutes: 30
+    name: "Test Airflow standalone command"
+    runs-on: ${{ fromJSON(inputs.runners) }}
+    env:
+      PYTHON_MAJOR_MINOR_VERSION: "${{ inputs.default-python-version }}"
+    steps:
+      - name: "Cleanup repo"
+        shell: bash
+        run: docker run -v "${GITHUB_WORKSPACE}:/workspace" -u 0:0 bash -c "rm -rf /workspace/*"
+      - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
+        with:
+          persist-credentials: false
+      - name: "Install Breeze"
+        uses: ./.github/actions/breeze
+      - name: "Test airflow standalone command"
+        run: |
+          # Start airflow standalone and wait for "Airflow is ready" message
+          timeout 600s breeze run bash -c "
+            airflow standalone 2>&1 | tee /tmp/airflow.log &
+            AIRFLOW_PID=\$!
+
+            for i in {1..600}; do
+              if grep -q 'Airflow is ready' /tmp/airflow.log; then
+                echo 'Airflow standalone is ready!'
+                kill \$AIRFLOW_PID
+                exit 0
+              fi
+              sleep 1
+            done
+
+            echo 'FAILED: Airflow standalone did not start up in time'
+            kill \$AIRFLOW_PID
+            exit 1
+          "
+
